--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,25 +1,25 @@
 ---
 import HeaderLink from './HeaderLink.astro';
 import { SITE_TITLE } from '../consts';
+
+import { Icon } from 'astro-icon';
 ---
 
-<header>
-	<h2>
-		{SITE_TITLE}
-	</h2>
-	<nav>
-		<HeaderLink href="/">Home</HeaderLink>
-		<HeaderLink href="/blog">Blog</HeaderLink>
-		<HeaderLink href="/about">About</HeaderLink>
-		<HeaderLink href="https://twitter.com/astrodotbuild" target="_blank">Twitter</HeaderLink>
-		<HeaderLink href="https://github.com/withastro/astro" target="_blank">GitHub</HeaderLink>
-	</nav>
+<header class="flex justify-between items-center py-4">
+  <div class="flex space-x-2 items-center">
+    <h2 class="text-lg font-bold">
+      <a href="/">{SITE_TITLE}</a>
+    </h2>
+    <nav class="text-md space-x-2">
+      <HeaderLink href="/">Home</HeaderLink>
+      <HeaderLink href="/blog">Blog</HeaderLink>
+      <HeaderLink href="/project">Projects</HeaderLink>
+      <HeaderLink href="/cookbook">CookBook</HeaderLink>
+    </nav>
+  </div>
+  <div class="space-x-2 flex flex-row">
+    <HeaderLink href="/card">Contact</HeaderLink>
+    <HeaderLink href="/feed.rss"><Icon class="w-8" pack="ph" name="rss"/></HeaderLink>
+    <HeaderLink href="https://github.com/wkaisertexas" target="_blank"><Icon class="w-8" pack="cib" name="github"/></HeaderLink>
+  </div>
 </header>
-<style>
-	header {
-		margin: 0em 0 2em;
-	}
-	h2 {
-		margin: 0.5em 0;
-	}
-</style>
