--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -13,9 +13,19 @@ type Props = CollectionEntry<'blog'>;
 
 const post = Astro.props;
 const { Content } = await post.render();
+
+const posts = (await getCollection('blog')).sort(
+  (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
+);
+
+// calculate the index of this post
+const index = posts.findIndex((p) => p.slug === post.slug);
+
+// get the previous and next posts make sure to deal with out of bounds
+const prevPost = posts[index - 1] || null;
+const nextPost = posts[index + 1] || null;
 ---
 
-<BlogPost {...post.data}>
-	<h1>{post.data.title}</h1>
+<BlogPost {...post.data} prev={prevPost} next={nextPost}>
 	<Content />
 </BlogPost>
